@@ -1,3 +1,9 @@
+2007-05-17  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Support conditionals for Shlibs lines via new
+	get_shlibs_field accessor
+	* Engine.pm: Use new Shlibs accessor for dumpinfo
+
 2007-05-16  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Catch non-binaries listed in Shlibs; refactor
